# screen-share

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md  main.sh
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: capture.rs  input.rs  main.rs
src/: capture.rs  input.rs  main.rs  signaling.rs  webrtc_session.rs
static/: index.html
